<resources>
    <string name="app_name">MyRecipes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
</resources>